[project]
name = "redcollar-geo-points-api"
version = "0.1.0"
description = "Archivist path for saving the world."
authors = [
    {name = "xelpixness",email = "xelpixness@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.0,<6.0)",
    "djangorestframework (>=3.15,<4.0)",
    "django-geojson (>=4.2.0,<5.0.0)",
    "httpie (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "coverage (>=7.13.1,<8.0.0)",
]
